fix(message): added overflow-wrap to handle long words (#1517)
* fix(message): added overflow-wrap to handle long words

* fix(message): added bottom padding

---------

--- a/packages/core/src/components/message/message.scss
+++ b/packages/core/src/components/message/message.scss
@@ -68,7 +68,8 @@
     flex-direction: column;
     gap: 4px;
     color: var(--foreground-text-strong);
-    padding: 2px 0;
+    padding: 2px 24px 2px 0;
+    overflow-wrap: anywhere;
 
     .header {
       @include headline-07;
